Feat: Add signup component

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,7 +1,7 @@
 <div class="auth">
   <mat-card>
     <div class="auth__signup">
-      <button mat-flat-button color="primary" class="auth__signup-button" (click)="signup()">Signup</button>
+      <button mat-flat-button color="primary" class="auth__signup-button" routerLink='/signup'>Signup</button>
     </div>
     <mat-card-header class="auth__header">
       <mat-card-title>Login</mat-card-title>
