Feat: Add header

--- a/src/app/core/header/header.component.scss
+++ b/src/app/core/header/header.component.scss
@@ -1,14 +1,24 @@
-.header {
-  &__nav-list {
-    display: flex;
-    justify-content: end;
-    width: 100%;
-    list-style: none;
-  }
+a {
+  text-decoration: none;
+  color: white;
+}
 
-  &__nav-list-link {
-    color: #fff;
-    text-decoration: none;
-    padding-left: 2rem;
+a:hover, a:active{
+  color: lightgray;
+}
+
+.navigation-items{
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+}
+
+mat-toolbar{
+  border-radius: 3px;
+}
+
+@media(max-width: 959px){
+  mat-toolbar{
+      border-radius: 0px;
   }
 }
