--- a/src/app/modules/meals-list/meals-list.component.html
+++ b/src/app/modules/meals-list/meals-list.component.html
@@ -1,25 +1,8 @@
 <div class="meals" *ngIf="(mealsService.mealsSubject | async) as meals">
-  <mat-card-actions *ngFor="let meal of meals" class="meals__card">
-    <mat-card-header>
-      <mat-card-title>{{ meal.name }}</mat-card-title>
-    </mat-card-header>
-    <img
-      class="meals__card-image"
-      mat-card-image
-      src="http://localhost:5000/{{ meal.image }}"
-      alt="Meal image"
-    />
-    <mat-card-content>
-      <p class="meals__card-desc">
-        {{ meal.desc | excerpt: 200 }}
-      </p>
-    </mat-card-content>
-    <mat-card-actions class="meals__card-actions">
-      <button mat-raised-button color="primary" mat-button (click)="goToDetails(meal.id)">View more</button>
-      <div>
-        <mat-icon class="meals__card-action-icon">edit</mat-icon>
-        <mat-icon class="meals__card-action-icon">delete</mat-icon>
-      </div>
-    </mat-card-actions>
-  </mat-card-actions>
+  <app-meal
+   *ngFor="let singleMeal of meals"
+   [meal]="singleMeal"
+   (editMeal)="openDialog($event)"
+   (removeMeal)="removeMeal($event)"
+   ></app-meal>
 </div>
