Feat: Add directive to move meal-card on hover

--- a/src/app/modules/meals-list/meal/meal.component.html
+++ b/src/app/modules/meals-list/meal/meal.component.html
@@ -1,4 +1,4 @@
-<mat-card-actions class="meal">
+<mat-card class="meal">
   <mat-card-header>
     <mat-card-title>{{ meal.name }}</mat-card-title>
   </mat-card-header>
@@ -20,4 +20,4 @@
       <mat-icon class="meal__action" (click)="onMealRemove()">delete</mat-icon>
     </div>
   </mat-card-actions>
-</mat-card-actions>
+</mat-card>
