--- a/src/app/core/authentication/login/login.component.html
+++ b/src/app/core/authentication/login/login.component.html
@@ -1,4 +1,4 @@
-<app-spinner *ngIf="test"></app-spinner>
+<app-spinner *ngIf="isSpinnerOn"></app-spinner>
 <div class="auth">
   <mat-card>
     <div class="auth__signup">
