--- a/src/app/core/authentication/signup/signup.component.scss
+++ b/src/app/core/authentication/signup/signup.component.scss
@@ -17,7 +17,10 @@
   justify-content: center;
   align-items: center;
   height: 100%;
-  background-color: lightgray;
+  background: linear-gradient(0deg, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+    url('../../../../assets/images/auth-bg-2.jpg');
+  background-size: cover;
+  background-repeat: no-repeat;
 
   &__login {
     border-bottom: 1px solid lightgray;
