--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -4,13 +4,17 @@
       <mat-icon>menu</mat-icon>
     </button>
   </div>
-  <div>
-    <a routerLink="/home">Owner-Account</a>
+  <div fxHide.xs>
+    <a routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}" routerLink="/">Meals</a>
+    <span> | </span>
+    <a routerLinkActive="active" routerLink="/new-meal">New meal</a>
   </div>
   <div fxFlex fxLayout fxLayoutAlign="end" fxHide.xs>
     <ul fxLayout fxLayoutGap="15px" class="navigation-items">
-      <li>
-        <a (click)="logout()" routerLink="/login">Logout</a>
+      <li routerLinkActive="active">
+        <a mat-list-item (click)="logout()" routerLink="/login">
+          <mat-icon>logout</mat-icon><span class="nav-caption"></span>
+        </a>
       </li>
     </ul>
   </div>
