--- a/src/app/core/sidenav-list/sidenav-list.component.html
+++ b/src/app/core/sidenav-list/sidenav-list.component.html
@@ -1,4 +1,10 @@
 <mat-nav-list>
+  <a mat-list-item routerLink="/meals">
+      <mat-icon>home</mat-icon><span class="nav-caption">Meals</span>
+  </a>
+  <a mat-list-item routerLink="/new-meal">
+      <mat-icon>add</mat-icon><span class="nav-caption">Add new meal</span>
+  </a>
   <a mat-list-item (click)="logout()" routerLink="/login">
       <mat-icon>logout</mat-icon><span class="nav-caption">Logout</span>
   </a>
