--- a/src/app/modules/meals-list/meals-list.component.html
+++ b/src/app/modules/meals-list/meals-list.component.html
@@ -5,5 +5,6 @@
     [meal]="singleMeal"
     (editMeal)="openDialog($event)"
     (removeMeal)="removeMeal($event)"
+    (goDetails)="goToDetails($event)"
   ></app-meal>
 </div>
