Fix: Enable user signup

--- a/src/app/core/authentication/login/login.component.scss
+++ b/src/app/core/authentication/login/login.component.scss
@@ -44,12 +44,6 @@
   }
 
   &__login-status {
-    width: 100%;
-    padding: 1rem 0;
-    margin-bottom: 1rem;
-    color: #ffffff;
-    background-color: $redColor;
-    border-radius: 5px;
-    text-align: center;
+    @include formMessage($redColor);
   }
 }
