--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <mat-sidenav-container *ngIf="authService.isUserLogged; else unlogged">
+  <app-spinner *ngIf="isSpinnerOn"></app-spinner>
   <mat-sidenav #sidenav role="navigation">
     <app-sidenav-list (sidenavClose)="sidenav.close()"></app-sidenav-list>
   </mat-sidenav>
