--- a/src/app/core/authentication/signup/signup.component.html
+++ b/src/app/core/authentication/signup/signup.component.html
@@ -9,6 +9,11 @@
       <mat-card-title>Signup</mat-card-title>
     </mat-card-header>
     <mat-card-content>
+      <p *ngIf="signupStatus" [ngClass]="{'errorStatus': isError, 'successStatus': !isError }">{{ signupStatus }}</p>
+      <ng-container *ngIf="isSpinnerOn">
+        <mat-icon class="signup__spinner"><mat-spinner diameter="30"> </mat-spinner></mat-icon>
+      </ng-container>
+
       <form class="signup__form" [formGroup]="signupForm" (ngSubmit)="signup(signupForm)">
         <mat-form-field>
           <input formControlName="email" matInput placeholder="Email" type="text" />
@@ -28,7 +33,7 @@
           <mat-error *ngIf="password.errors?.required && password.touched" align="start"
             >Enter you password</mat-error
           >
-          <mat-error *ngIf="password.errors?.min && password.touched" align="start"
+          <mat-error *ngIf="password.errors?.minlength && password.touched" align="start"
             >Min length is 5</mat-error
           >
         </mat-form-field>
@@ -37,7 +42,9 @@
           <mat-error *ngIf="name.errors?.required && name.touched" align="start"
             >Enter you name</mat-error
           >
-          <mat-error *ngIf="name.errors?.pattern && name.touched" align="start">Only letters</mat-error>
+          <mat-error *ngIf="name.errors?.pattern && name.touched" align="start"
+            >Only letters</mat-error
+          >
         </mat-form-field>
         <mat-form-field>
           <input formControlName="surname" matInput placeholder="Surname" type="text" />
@@ -48,7 +55,13 @@
             >Only letters</mat-error
           >
         </mat-form-field>
-        <button mat-flat-button color="primary" type="submit" [disabled]="signupForm.invalid">
+        <button
+          mat-raised-button
+          color="primary"
+          type="submit"
+          mat-raised-button
+          [disabled]="signupForm.invalid || signupForm.status === 'PENDING'"
+        >
           Signup
         </button>
       </form>
