--- a/src/app/core/authentication/signup/signup.component.scss
+++ b/src/app/core/authentication/signup/signup.component.scss
@@ -1,3 +1,5 @@
+@import 'main.scss';
+
 ::ng-deep {
   &.mat-card {
     min-width: 25rem;
@@ -36,4 +38,17 @@
   &__login-button {
     width: 100%;
   }
+
+  &__spinner {
+    display: block;
+    margin: 0 auto 1rem auto;
+  }
+}
+
+.errorStatus {
+  @include formMessage($redColor)
+}
+
+.successStatus {
+  @include formMessage($greenColor)
 }
