Feat: Add deactivate route guard

--- a/src/app/modules/new-meal/new-meal.component.html
+++ b/src/app/modules/new-meal/new-meal.component.html
@@ -19,7 +19,8 @@
 
         <mat-form-field>
           <input matInput formControlName="name" type="text" placeholder="Name" /> </mat-form-field
-        ><mat-form-field>
+        >
+        <mat-form-field>
           <input matInput formControlName="desc" type="text" placeholder="Description" />
         </mat-form-field>
         <button mat-raised-button color="primary" type="submit" [disabled]="myForm.invalid">Submit form</button>
@@ -27,3 +28,5 @@
     </mat-card-content>
   </mat-card>
 </div>
+
+
