--- a/src/app/modules/meal-details/meal-details.component.html
+++ b/src/app/modules/meal-details/meal-details.component.html
@@ -1,2 +1,11 @@
-<h1>Details</h1>
-<h3>Show meal with id {{ mealId }}</h3>
+<mat-card class="example-card">
+  <mat-card-header>
+    <mat-card-title>Details</mat-card-title>
+  </mat-card-header>
+  <img mat-card-image (loaded)="onImageLoad()" src="http://localhost:5000/{{ meal.image }}" alt="Meal image" />
+  <mat-card-content>
+    <p>
+     {{ meal.desc }}
+    </p>
+  </mat-card-content>
+</mat-card>
