--- a/src/app/core/authentication/signup/signup.component.html
+++ b/src/app/core/authentication/signup/signup.component.html
@@ -1,20 +1,27 @@
 <div class="signup">
   <mat-card>
-    <div class="signup__login">
-      <button mat-flat-button color="primary" class="signup__login-button" routerLink="/login">
-        Login
-      </button>
-    </div>
+    <!-- Navigate to login page -->
+    <button mat-raised-button color="primary" class="signup__login-navigation" routerLink="/login">
+      Login
+    </button>
+
+    <!-- Separate section -->
+    <app-form-separator></app-form-separator>
+
+    <!-- Form header -->
     <mat-card-header>
       <mat-card-title>Signup</mat-card-title>
     </mat-card-header>
-    <mat-card-content>
-      <p *ngIf="signupStatus" [ngClass]="{'errorStatus': isError, 'successStatus': !isError }">{{ signupStatus }}</p>
-      <ng-container *ngIf="isSpinnerOn">
-        <mat-icon class="signup__spinner"><mat-spinner diameter="30"> </mat-spinner></mat-icon>
-      </ng-container>
 
-      <form class="signup__form" [formGroup]="signupForm" (ngSubmit)="signup(signupForm)">
+    <!-- Form Content -->
+    <mat-card-content>
+      <p *ngIf="signupStatus" [ngClass]="{ errorStatus: isError, successStatus: !isError }">
+        {{ signupStatus }}
+      </p>
+
+      <app-form-spinner *ngIf="isSpinnerOn"></app-form-spinner>
+
+      <form class="signup__form" [formGroup]="signupForm" (ngSubmit)="signup()">
         <mat-form-field>
           <input formControlName="email" matInput placeholder="Email" type="text" />
           <mat-error *ngIf="email.errors?.required && email.touched" align="start"
