--- a/src/app/core/authentication/login/login.component.scss
+++ b/src/app/core/authentication/login/login.component.scss
@@ -18,7 +18,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100%;
+  min-height: 100%;
   background:linear-gradient(0deg, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('/assets/images/auth-bg.jpg');
   background-size: cover;
   background-repeat: no-repeat;
