--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,7 @@
   <mat-sidenav-content>
     <app-header (sidenavToggle)="sidenav.toggle()"></app-header>
     <main>
-      <app-spinner *ngIf="isSpinnerOn"></app-spinner>
+      <app-spinner [hidden]="!isSpinnerOn"></app-spinner>
       <router-outlet></router-outlet>
     </main>
   </mat-sidenav-content>
