--- a/src/app/core/sidenav-list/sidenav-list.component.html
+++ b/src/app/core/sidenav-list/sidenav-list.component.html
@@ -1,11 +1,16 @@
 <mat-nav-list>
-  <a mat-list-item routerLink="/meals">
-      <mat-icon>home</mat-icon><span class="nav-caption">Meals</span>
+  <a
+    mat-list-item
+    routerLinkActive="active"
+    [routerLinkActiveOptions]="{ exact: true }"
+    routerLink="/"
+  >
+    <mat-icon>home</mat-icon><span class="nav-caption">Meals</span>
   </a>
-  <a mat-list-item routerLink="/new-meal">
-      <mat-icon>add</mat-icon><span class="nav-caption">Add new meal</span>
+  <a mat-list-item routerLinkActive="active" routerLink="/new-meal">
+    <mat-icon>add</mat-icon><span class="nav-caption">Add new meal</span>
   </a>
-  <a mat-list-item (click)="logout()" routerLink="/login">
-      <mat-icon>logout</mat-icon><span class="nav-caption">Logout</span>
+  <a mat-list-item routerLinkActive="active" (click)="logout()" routerLink="/login">
+    <mat-icon>logout</mat-icon><span class="nav-caption">Logout</span>
   </a>
 </mat-nav-list>
