--- a/src/app/modules/meals-list/meal/meal.component.html
+++ b/src/app/modules/meals-list/meal/meal.component.html
@@ -14,7 +14,7 @@
     </p>
   </mat-card-content>
   <mat-card-actions class="meal__actions">
-    <button mat-raised-button color="primary" (click)='goToDetails(meal._id)' >View more</button>
+    <button mat-raised-button color="primary" (click)="goToDetails(meal._id)">View more</button>
     <div>
       <mat-icon class="meal__action" (click)="onMealEdit()">edit</mat-icon>
       <mat-icon class="meal__action" (click)="onMealRemove()">delete</mat-icon>
