--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,4 +1,6 @@
-mat-sidenav-container, mat-sidenav-content, mat-sidenav {
+mat-sidenav-container,
+mat-sidenav-content,
+mat-sidenav {
   height: 100%;
 }
 
@@ -8,6 +10,5 @@ mat-sidenav {
 
 main {
   height: 100%;
-  padding: 5%;
   font-size: 2rem;
 }
