--- a/src/app/core/authentication/signup/signup.component.scss
+++ b/src/app/core/authentication/signup/signup.component.scss
@@ -19,10 +19,7 @@
   justify-content: center;
   align-items: center;
   min-height: 100%;
-  background: linear-gradient(0deg, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-    url('/assets/images/auth-bg.jpg');
-  background-size: cover;
-  background-repeat: no-repeat;
+  @include backgroundImage();
 
   &__login-navigation {
     width: 100%;
@@ -32,12 +29,14 @@
     display: flex;
     flex-direction: column;
   }
+
+  &__errorStatus {
+    @include formMessage($redColor);
+  }
+  
+  &__successStatus {
+    @include formMessage($greenColor);
+  }
 }
 
-.errorStatus {
-  @include formMessage($redColor);
-}
 
-.successStatus {
-  @include formMessage($greenColor);
-}
