--- a/src/app/modules/new-meal/new-meal.component.scss
+++ b/src/app/modules/new-meal/new-meal.component.scss
@@ -1,3 +1,5 @@
+@import 'main.scss';
+
 ::ng-deep {
   &.mat-card-header {
     justify-content: center;
@@ -5,10 +7,11 @@
 }
 
 .newMeal {
+  @include backgroundImage();
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100%;
+  min-height: 100%;
 
   &__form {
     display: grid;
@@ -19,5 +22,13 @@
 
   &__image-name {
     text-align: center;
+  }
+
+  &__errorStatus {
+    @include formMessage($redColor);
+  }
+
+  &__successStatus {
+    @include formMessage($greenColor);
   }
 }
