--- a/src/scss/abstract/_mixins.scss
+++ b/src/scss/abstract/_mixins.scss
@@ -45,3 +45,9 @@
   text-align: center;
 }
 
+@mixin backgroundImage($imagePath: '/assets/images/auth-bg.jpg') {
+  background: linear-gradient(0deg, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url($imagePath);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+}
