--- a/src/app/core/header/header.component.scss
+++ b/src/app/core/header/header.component.scss
@@ -15,7 +15,7 @@ a:hover, a:active, .active{
   justify-content: space-between;
   align-self: center;
   padding: 0 5%;
-  background: #234d6f;
+  background: $darkBlueColor;
 
   &__mobile {
     @media only screen and (min-width: 600px) {
