--- a/src/app/modules/new-meal/new-meal.component.scss
+++ b/src/app/modules/new-meal/new-meal.component.scss
@@ -12,12 +12,18 @@
   justify-content: center;
   align-items: center;
   min-height: 100%;
+  padding: 5%;
+
+  &__card {
+    width: 100%;
+    max-width: 40rem;
+    height: 100%;
+  }
 
   &__form {
     display: grid;
     grid-template-columns: 1fr;
     row-gap: 2rem;
-    width: 40rem;
   }
 
   &__image-name {
