--- a/src/app/modules/meals-list/meal/meal.component.html
+++ b/src/app/modules/meals-list/meal/meal.component.html
@@ -5,7 +5,7 @@
   <img
     class="meal__image"
     mat-card-image
-    src="http://localhost:5000/{{ meal.image }}"
+    src="https://meals-node-api.herokuapp.com/{{ meal.image }}"
     alt="Meal image"
   />
 
