--- a/src/app/core/sidenav-list/sidenav-list.component.html
+++ b/src/app/core/sidenav-list/sidenav-list.component.html
@@ -8,7 +8,7 @@
   >
     <mat-icon>home</mat-icon><span class="nav-caption">Meals</span>
   </a>
-  <a mat-list-item routerLinkActive="active" routerLink="/new-meal" (click)="close()">
+  <a mat-list-item routerLinkActive="active" routerLink="meals/new-meal" (click)="close()">
     <mat-icon>add</mat-icon><span class="nav-caption">Add new meal</span>
   </a>
   <a mat-list-item routerLinkActive="active" (click)="logout()" routerLink="/login">
