--- a/src/app/modules/meals/new-meal/new-meal.component.html
+++ b/src/app/modules/meals/new-meal/new-meal.component.html
@@ -1,7 +1,7 @@
 <div class="newMeal">
   <mat-card class="newMeal__card">
     <mat-card-header>
-      <mat-card-title style="margin-bottom: 0">Add new post</mat-card-title>
+      <mat-card-title style="margin-bottom: 0">Add new meal</mat-card-title>
     </mat-card-header>
 
     <app-form-separator></app-form-separator>
